# SmartArrayProj

./: README.md
SmartArray/: CMakeLists.txt
SmartArray/app/includes/: Employee.hpp  SmartArray.hpp
SmartArray/app/includes/handlers/: ErrorHandler.hpp
SmartArray/app/src/: SmartArray.cpp  main.cpp
SmartArray/app/src/data/: Employee.cpp
SmartArray/app/src/handlers/: ErrorHandler.cpp
